Implement friends list functionality, ability to add chat rooms. Automatically refresh after sending a message.

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -81,9 +81,10 @@ form input[type=text] {
     padding: 10px;
 }
 
-.friend {
+section .friend {
     color: #fff;
     background-color: #0090da;
+    font-weight:800;
 }
 
 section {
