--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -145,3 +145,7 @@ button:hover {
   background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
   text-decoration: none;
 }
+
+.chatroomSelecter {
+    width: 120px;
+}
