--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -14,6 +14,25 @@ body {
     border: solid #ddd;
     border-width: 0 1px 1px 1px;
     color: white;
+    display:inline-block;
+}
+
+#tabs {
+    display:inline-block;
+    color:white;
+    width:75px;
+    float:left;
+}
+
+#tabsandchats {
+    width:700px;
+    margin:auto;
+    text-align:left;
+}
+
+.tab {
+    margin-top:15px;
+    float:right;
 }
 
 #main h1 {
